--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,8 @@
   </head>
 
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    
     <%- body %>
 
 
@@ -89,6 +91,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/initSocket.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
